--- a/server/d1/d1/templates/registration/password_reset_done.html
+++ b/server/d1/d1/templates/registration/password_reset_done.html
@@ -3,11 +3,11 @@
 
 {% block breadcrumbs %}<div class="breadcrumbs"></div>{% endblock %}
 
-{% block title %}{% trans 'Password reset successful' %}{% endblock %}
+{% block title %}{% trans '密码重置成功' %}{% endblock %}
 
 {% block content %}
 
-<h1>{% trans 'Password reset successful' %}</h1>
+<h1>{% trans '密码重置成功' %}</h1>
 
 <p>{% trans "We've e-mailed you instructions for setting your password to the e-mail address you submitted. You should be receiving it shortly." %}</p>
 
