--- a/server/d1/d1/templates/registration/password_reset_email.html
+++ b/server/d1/d1/templates/registration/password_reset_email.html
@@ -1,15 +1,16 @@
 {% load i18n %}{% autoescape off %}
-{% trans "You're receiving this e-mail because you requested a password reset" %}
-{% blocktrans %}for your user account at {{ site_name }}{% endblocktrans %}.
+{% trans "这封邮件用于重置你在" %}
+{% blocktrans %}{{ site_name }}{% endblocktrans %}.
+{% trans "上的密码，如非本人操作，请勿点击链接" %}
 
-{% trans "Please go to the following page and choose a new password:" %}
+{% trans "请点击以下链接以重置密码：" %}
 {% block reset_link %}
 {{ protocol }}://{{ domain }}{% url "django.contrib.auth.views.password_reset_confirm" uidb36=uid, token=token %}
 {% endblock %}
-{% trans "Your username, in case you've forgotten:" %} {{ user.username }}
+{% trans "注意，你的用户名是：" %} {{ user.username }}
 
-{% trans "Thanks for using our site!" %}
+{% trans "多谢你的使用！" %}
 
-{% blocktrans %}The {{ site_name }} team{% endblocktrans %}
+{% blocktrans %} {{ site_name }} 团队{% endblocktrans %}
 
 {% endautoescape %}
