--- a/server/d1/d1/templates/registration/password_change_done.html
+++ b/server/d1/d1/templates/registration/password_change_done.html
@@ -1,13 +1,13 @@
 {% extends "registration/base.html" %}
 {% load i18n %}
 
-{% block title %}{% trans 'Password change successful' %}{% endblock %}
+{% block title %}{% trans '成功修改密码！' %}{% endblock %}
 
 {% block content %}
 
-<h1>{% trans 'Password change successful' %}</h1>
+<h1>{% trans '成功修改密码！' %}</h1>
 
-<p>{% trans 'Your password was changed.' %}</p>
+<p>{% trans '你的密码已经成功修改。' %}</p>
 
 {% endblock %}
 
