--- a/server/d1/d1/templates/registration/password_change_form.html
+++ b/server/d1/d1/templates/registration/password_change_form.html
@@ -2,24 +2,24 @@
 {% extends "registration/base.html" %}
 {% load i18n %}
 
-{% block title %} {% trans 'Password change' %} {% endblock %}
+{% block title %} {% trans '修改密码' %} {% endblock %}
 
 {% block content %}
 
-<h1>{% trans 'Password change' %}</h1>
+<h1>{% trans '修改密码' %}</h1>
 
-<p>{% trans "Please enter your old password, for security's sake, and then enter your new password twice so we can verify you typed it in correctly." %}</p>
+<p>{% trans "请输入你的旧密码，并输入两次新密码。" %}</p>
 
 <form action="" method="post">
 {% csrf_token %}
 {{ form.old_password.errors }}
-<p class="aligned wide"><label for="id_old_password">{% trans 'Old password:' %}</label>{{ form.old_password }}</p>
+<p class="aligned wide"><label for="id_old_password">{% trans '旧密码：' %}</label>{{ form.old_password }}</p>
 {{ form.new_password1.errors }}
-<p class="aligned wide"><label for="id_new_password1">{% trans 'New password:' %}</label>{{ form.new_password1 }}</p>
+<p class="aligned wide"><label for="id_new_password1">{% trans '新密码：' %}</label>{{ form.new_password1 }}</p>
 {{ form.new_password2.errors }}
-<p class="aligned wide"><label for="id_new_password2">{% trans 'Confirm password:' %}</label>{{ form.new_password2 }}</p>
+<p class="aligned wide"><label for="id_new_password2">{% trans '确认密码：' %}</label>{{ form.new_password2 }}</p>
 
-<p><input type="submit" value="{% trans 'Change my password' %}" /></p>
+<p><input type="submit" value="{% trans '提交修改' %}" /></p>
 </form>
 
 
