--- a/server/d1/d1/templates/registration/password_reset_complete.html
+++ b/server/d1/d1/templates/registration/password_reset_complete.html
@@ -3,15 +3,15 @@
 
 {% block breadcrumbs %}<div class="breadcrumbs"></div>{% endblock %}
 
-{% block title %}{% trans 'Password reset complete' %}{% endblock %}
+{% block title %}{% trans '密码成功修改' %}{% endblock %}
 
 {% block content %}
 
-<h1>{% trans 'Password reset complete' %}</h1>
+<h1>{% trans '密码成功修改' %}</h1>
 
-<p>{% trans "Your password has been set.  You may go ahead and log in now." %}</p>
+<p>{% trans "你的密码已成功修改，你可以立即登录" %}</p>
 
-<p><a href="{{ login_url }}">{% trans 'Log in' %}</a></p>
+<p><a href="{{ login_url }}">{% trans '登录' %}</a></p>
 
 {% endblock %}
 
