--- a/server/d1/d1/templates/registration/password_reset_confirm.html
+++ b/server/d1/d1/templates/registration/password_reset_confirm.html
@@ -3,30 +3,30 @@
 
 {% block breadcrumbs %}<div class="breadcrumbs"></div>{% endblock %}
 
-{% block title %}{% trans 'Password reset' %}{% endblock %}
+{% block title %}{% trans '密码重置' %}{% endblock %}
 
 {% block content %}
 
 {% if validlink %}
 
-<h1>{% trans 'Enter new password' %}</h1>
+<h1>{% trans '输入新密码' %}</h1>
 
-<p>{% trans "Please enter your new password twice so we can verify you typed it in correctly." %}</p>
+<p>{% trans "请输入你的新密码两次以重置密码。" %}</p>
 
 <form action="" method="post">
 	{% csrf_token %}
 {{ form.new_password1.errors }}
-<p class="aligned wide"><label for="id_new_password1">{% trans 'New password:' %}</label>{{ form.new_password1 }}</p>
+<p class="aligned wide"><label for="id_new_password1">{% trans '新密码：' %}</label>{{ form.new_password1 }}</p>
 {{ form.new_password2.errors }}
-<p class="aligned wide"><label for="id_new_password2">{% trans 'Confirm password:' %}</label>{{ form.new_password2 }}</p>
-<p><input type="submit" value="{% trans 'Change my password' %}" /></p>
+<p class="aligned wide"><label for="id_new_password2">{% trans '再次输入：' %}</label>{{ form.new_password2 }}</p>
+<p><input type="submit" value="{% trans '提交修改' %}" /></p>
 </form>
 
 {% else %}
 
-<h1>{% trans 'Password reset unsuccessful' %}</h1>
+<h1>{% trans '密码修改失败' %}</h1>
 
-<p>{% trans "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}</p>
+<p>{% trans "此密码重置链接非法，或者已被使用过，请重新发起密码重置请求。" %}</p>
 
 {% endif %}
 
