--- a/server/d1/d1/templates/registration/password_reset_form.html
+++ b/server/d1/d1/templates/registration/password_reset_form.html
@@ -3,18 +3,18 @@
 
 {% block breadcrumbs %}<div class="breadcrumbs"></div>{% endblock %}
 
-{% block title %}{% trans "Password reset" %}{% endblock %}
+{% block title %}{% trans "密码重置" %}{% endblock %}
 
 {% block content %}
 
-<h1>{% trans "Password reset" %}</h1>
+<h1>{% trans "密码重置" %}</h1>
 
-<p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll e-mail instructions for setting a new one." %}</p>
+<p>{% trans "忘记密码？输入你的邮箱以重置密码。" %}</p>
 
 <form action="" method="post">
 	{% csrf_token %}
 {{ form.email.errors }}
-<p><label for="id_email">{% trans 'E-mail address:' %}</label> {{ form.email }} <input type="submit" value="{% trans 'Reset my password' %}" /></p>
+<p><label for="id_email">{% trans '邮箱地址：' %}</label> {{ form.email }} <input type="submit" value="{% trans '重置密码' %}" /></p>
 </form>
 
 {% endblock %}
