--- a/server/d1/d1/templates/registration/registration_complete.html
+++ b/server/d1/d1/templates/registration/registration_complete.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Registration complete{% endblock %}
+{% block title %}注册成功{% endblock %}
 
 {% block content %}
 {% load staticfiles %}
@@ -8,7 +8,7 @@
 <div class="panel-body">
 <script src="{% static 'jquery/2.0.3/jquery.min.js' %}"></script>
 <h1>Check your email</h1>
-<p>An activation link has been sent to the email address you supplied, along with instructions for activating your account.</p>
+<p>激活邮件已发送到你的邮箱中，请根据邮件中的提示激活账号。</p>
 <a href="/">Back to vine comments<a>
 </div>
 </div>
