--- a/server/d1/d1/templates/registration/registration_form.html
+++ b/server/d1/d1/templates/registration/registration_form.html
@@ -1,11 +1,11 @@
 {% extends "registration/base.html" %}
 
-{% block title %}Sign up{% endblock %}
+{% block title %}注册{% endblock %}
 
 {% block content %}
 
   {% if form.errors %}
-  <p class="errors">Please correct the errors below: {{ form.non_field_errors }}</p>
+  <p class="errors">请修正以下错误 {{ form.non_field_errors }}</p>
   {% endif %}
 
   <h1>Create an account</h1>
@@ -13,28 +13,28 @@
   <form method="post" action="" class="wide">
 	{% csrf_token %}
     <p>
-      <label for="id_username">Username:</label>
+      <label for="id_username">用户名：</label>
       {% if form.username.errors %}
         <p class="errors">{{ form.username.errors.as_text }}</p>
       {% endif %}
       {{ form.username }}
     </p>
     <p>
-      <label for="id_email">Email address:</label>
+      <label for="id_email">邮箱：</label>
       {% if form.email.errors %}
         <p class="errors">{{ form.email.errors.as_text }}</p>
       {% endif %}
       {{ form.email }}
     </p>
     <p>
-      <label for="id_password1">Password:</label>
+      <label for="id_password1">密码：</label>
       {% if form.password1.errors %}
         <p class="errors">{{ form.password1.errors.as_text }}</p>
       {% endif %}
       {{ form.password1 }}
     </p>
     <p>
-      <label for="id_password2">Password (type again to catch typos):</label>
+      <label for="id_password2">密码（再次输入）：</label>
       {% if form.password2.errors %}
         <p class="errors">{{ form.password2.errors.as_text }}</p>
       {% endif %}
@@ -46,13 +46,7 @@
 {% endblock %}
 
 {% block content-related %}
-<p>Fill out the form to the left (all fields are required), and your
-account will be created; you'll be sent an email with instructions on how
-to finish your registration.</p>
 
-<p>We'll only use your email to send you signup instructions. We hate spam
-as much as you do.</p>
+<p>填写以上表单（皆为必须）以创建你的账号，一封激活邮件将会发送到你的邮箱中，请根据其中提示对账号进行激活。</p>
 
-<p>This account will let you log into the ticket tracker, claim tickets,
-and be exempt from spam filtering.</p>
 {% endblock %}
