--- a/server/d1/vine_comment/templates/comments/base.html
+++ b/server/d1/vine_comment/templates/comments/base.html
@@ -28,7 +28,7 @@
 
 <div id="commentBoard">
   <div id="boardRight">
-        <div id="top">
+        <div id="top" class="navbar-top navbar navbar-default navbar-fixed-top">
             <div style="padding-top: 6px;">
             <table cellpadding="0" cellspacing="0" border="0" width="100%">
                 <tbody><tr>
@@ -130,6 +130,7 @@
             </table>
             </div>
         </div>
+<br/>
 <br/>
     {% block content%}
 
