--- a/server/d1/vine_comment/templates/comments/comment_list.html
+++ b/server/d1/vine_comment/templates/comments/comment_list.html
@@ -25,8 +25,8 @@
 </script>
 
 <style>
-  .left{width:50%;float:left;}
-  .right{margin-left:50%;}
+  .left{width:50%;float:left; padding-left: 10px;}
+  .right{margin-left:50%; padding-right: 10px;}
   .right-angle{border-Radius:0px;}
 </style>
 
@@ -43,11 +43,11 @@
     </button>
 </div>
 
-<div id="commetList" style="display:'';">
+<div id="commetList" style="display:''; padding-left: 10px; padding-right: 10px;">
 		{% include 'comments/comment_list_raw.html' %}
 </div>
 
-<div id="iTinkYouLike"	style="display: none;">
+<div id="iTinkYouLike"	style="display: none; padding-left: 10px; padding-right: 10px;">
 </div>
 
 
