--- a/server/d1/vine_comment/templates/comments/base.html
+++ b/server/d1/vine_comment/templates/comments/base.html
@@ -24,10 +24,10 @@
 <link rel="stylesheet" href="{% static 'test/comment_styles.css' %}" type="text/css" media="all" />
 </head>
 
-<body style="padding:5px;">
+<body style = "background-color: #f8f8f8;">
 
-<div id="commentBoard">
-  <div id="boardRight">
+<div id="commentBoard" >
+  <div id="boardRight" >
         <div id="top" class="navbar-top navbar navbar-default navbar-fixed-top">
             <div style="padding-top: 6px;">
             <table cellpadding="0" cellspacing="0" border="0" width="100%">
@@ -131,6 +131,7 @@
           </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
       </div><!-- /.modal -->    
+<br/>
 <br/>
 <br/>
     {% block content%}
