--- a/server/d1/vine_comment/templates/comments/comment_view_meta.html
+++ b/server/d1/vine_comment/templates/comments/comment_view_meta.html
@@ -108,6 +108,12 @@ border-bottom-left-radius: 0;
 .vc-gradient-bg {
 background: url(../../../static/icons/bg_sprites.png) 0 -60px repeat-x;
 }
+
+.vc-content {
+
+
+
+}
 </style>
 		<div class="alert-messages" id="message-drawer" style="opacity: 0; top: 60px; display: none;">
 		  <div class="message ">
@@ -117,8 +123,9 @@ background: url(../../../static/icons/bg_sprites.png) 0 -60px repeat-x;
 		    </div>
 		  </div>
 		</div>
-        
-       <div class="vc-replybox">
+ 
+    <div class="vc-content"> 
+       <div class="vc-replybox" width = "100%">
        <form method="post">
         <div class="vc-textarea-wrapper vc-rounded-top ">
          <textarea id="commentTop" name="commentTop" placeholder="可输入5-140个字" style=  "width:105%; overflow:hidden; resize:none;background:transparent;border-style:none;  "></textarea>
@@ -147,8 +154,10 @@ background: url(../../../static/icons/bg_sprites.png) 0 -60px repeat-x;
       </div>
         
 		<br>
+
 		<div id="showMsg">
 			{% include "comments/comment_list.html" %}
 		</div> <!-- /#showMsg -->
 		<br>
+    </div>
 {% endblock %}
