registration: update to prevent misunderstanding

--- a/server/d1/d1/templates/registration/activate.html
+++ b/server/d1/d1/templates/registration/activate.html
@@ -1,6 +1,6 @@
 {% extends "registration/base.html" %}
 
-{% block title %}账户成功激活！{% endblock %}
+{% block title %}账户激活{% endblock %}
 
 {% block content %}
   <h1>你的账户已成功激活。</h1>
