--- a/server/d1/d1/templates/registration/registration_complete.html
+++ b/server/d1/d1/templates/registration/registration_complete.html
@@ -9,7 +9,7 @@
 <script src="{% static 'jquery/2.0.3/jquery.min.js' %}"></script>
 <h1 style='margin-top:0'>注册成功！</h1>
 <p>激活邮件已发送到你的邮箱中，请根据邮件中的提示激活账号。</p>
-<a href="/">Back to vine comments<a>
+<a href="/">回到首页<a>
 </div>
 </div>
 {% endblock %}
