--- a/server/d1/vine_comment/templates/comments/base.html
+++ b/server/d1/vine_comment/templates/comments/base.html
@@ -28,12 +28,12 @@
 
 <div id="commentBoard" >
   <div id="boardRight" >
-        <div id="top" class="navbar-top navbar navbar-default navbar-fixed-top">
+        <div id="top" class="navbar-top navbar navbar-default navbar-fixed-top" style="background-color:black" >
             <div style="padding-top: 6px;">
             <table cellpadding="0" cellspacing="0" border="0" width="100%">
                 <tbody><tr>
                  <td id="logo" style="padding-left: 10px;" align="left">
-                    <img src="//{{ request.META.HTTP_HOST }}{% static 'icons/vine-comment.jpg' %}" />
+                    <img src="//{{ request.META.HTTP_HOST }}{% static 'icons/logo.jpg' %}" />
                 </td>
                 <td id="webTag" style="FILTER: glow(color=#B4BBCF,strength=5)" width="auto" align="center"><font face="黑体" color="#8C96B5" size="6"><b>藤蔓评论</b></font></td>
                 
