--- a/server/d1/d1/templates/registration/registration_form.html
+++ b/server/d1/d1/templates/registration/registration_form.html
@@ -8,7 +8,7 @@
   <p class="errors">请修正以下错误 {{ form.non_field_errors }}</p>
   {% endif %}
 
-  <h1>Create an account</h1>
+  <h1>创建新账号</h1>
   
   <form method="post" action="" class="wide">
 	{% csrf_token %}
@@ -40,7 +40,7 @@
       {% endif %}
       {{ form.password2 }}
     </p>
-    <p class="submit"><input type="submit" value="Register &rarr;"></p>
+    <p class="submit"><input type="submit" value="注册"></p>
   </form>
   
 {% endblock %}
