--- a/server/d1/vine_comment/templates/comments/comments_plugin_hot.html
+++ b/server/d1/vine_comment/templates/comments/comments_plugin_hot.html
@@ -27,7 +27,7 @@
 
 <div id="commet_hot">
     <fieldset>
-      <legend>最热评论</legend>
+      <div class="comment-legend">---------- 最热评论 ----------</div>
         <div id="commetList_hot">
             <ul class="list-group">
             {% for message in p_comment_hot.object_list %}
