--- a/server/d1/vine_comment/templates/comments/comments_plugin_new.html
+++ b/server/d1/vine_comment/templates/comments/comments_plugin_new.html
@@ -27,8 +27,8 @@
 
 <div id="commet_new">  
     <fieldset>
-      <legend>最新评论</legend>
-        
+        <div class="comment-legend">---------- 最新评论 ----------</div>
+
         <div id="commetList_new">
             <ul class="list-group">
             {% for message in p_comment_new.object_list %}
