--- a/server/d1/vine_comment/templates/comments/comments_plugin_relevant.html
+++ b/server/d1/vine_comment/templates/comments/comments_plugin_relevant.html
@@ -28,7 +28,7 @@
 
 <div id="commet_relevant">  
     <fieldset>
-      <legend>相关评论</legend>
+      <div class="comment-legend">---------- 相关评论 ----------</div>
         
         <div id="commetList_relevant">
             <ul class="list-group">
