refine dir to plugin

--- a/server/d1/vine_comment/templates/comments/base.html
+++ b/server/d1/vine_comment/templates/comments/base.html
@@ -21,7 +21,7 @@
 <link href="{% static 'font-awesome/4.0.3/css/font-awesome.min.css' %}" rel="stylesheet">
 <link href="{% static 'twitter-bootstrap/3.0.3/css/bootstrap.min.css' %}" rel="stylesheet">
 
-<link rel="stylesheet" href="{% static 'test/comment_styles.css' %}" type="text/css" media="all" />
+<link rel="stylesheet" href="{% static 'plugin/comment_styles.css' %}" type="text/css" media="all" />
 </head>
 
 <body style = "background-color: #f8f8f8;">
@@ -150,7 +150,7 @@
 -->
 <!-- <link href="http://cdn.bootcss.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet"> -->
 
-<script type="text/javascript" src="{% static "test/commentBoard.js" %}"></script>
+<script type="text/javascript" src="{% static "plugin/commentBoard.js" %}"></script>
 <script src="{% static 'twitter-bootstrap/3.0.3/js/bootstrap.min.js' %}"></script>
 
 </html>
