--- a/server/d1/vine_comment/templates/comments/comment_iframe_view.html
+++ b/server/d1/vine_comment/templates/comments/comment_iframe_view.html
@@ -1,7 +1,7 @@
 
 {% load staticfiles %}
-<link rel="stylesheet" href="//{{ request.META.HTTP_HOST }}{% static 'test/comment_styles.css' %}" type="text/css" media="all" />
-<script type="text/javascript" src="//{{ request.META.HTTP_HOST }}{% static 'test/floatCommentBoard.js' %}"></script>
+<link rel="stylesheet" href="//{{ request.META.HTTP_HOST }}{% static 'plugin/comment_styles.css' %}" type="text/css" media="all" />
+<script type="text/javascript" src="//{{ request.META.HTTP_HOST }}{% static 'plugin/floatCommentBoard.js' %}"></script>
 
 <style>
 #loadImg{position:absolute;}
