--- a/server/vine_comment/vine_comment/templates/base.html
+++ b/server/vine_comment/vine_comment/templates/base.html
@@ -39,11 +39,11 @@
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <ul class="nav navbar-nav">
         <!-- <li><a href="#home" data-toggle="tab" onclick="Home(this)">展示</a></li> -->
-        <li><a href="/comments/best" id="comments_best">最优</a></li>
+        <li><a href="/comments/best" id="site/comments_best">最优</a></li>
         <li><a href="/comments/up/7" id="comments_up_default">精华</a></li>
         <li><a href="/comments/hot/7" id="comments_hot_default">热议</a></li>
-        <li><a href="/comments/newest" id="comments_newest">最新</a></li>
-        <li><a href="/comments/tag" id="comments_tag">TAG</a></li>
+        <li><a href="/comments/newest" id="site/comments_newest">最新</a></li>
+        <li><a href="/comments/tag" id="site/comments_tag">TAG</a></li>
         {% comment %} <li><a href="/comments/debate/7" id="comments_debate_default">热议</a></li> {% endcomment %}
       </ul>
       <div class="col-sm-3 col-md-3">
