--- a/server/vine_comment/vine_comment/templates/home_raw.html
+++ b/server/vine_comment/vine_comment/templates/home_raw.html
@@ -78,7 +78,7 @@
 {% if flag %}
 <a href="/comment/{{url_b64}}/"><<回到藤蔓评论</a>
 {% endif %}
-{% include 'comments_list.html' %}
+{% include 'site/comments_list.html' %}
 
 <ul class='pagination'>
   {% if p_comment.has_previous %}
