--- a/server/vine_comment/vine_comment/templates/site/comments_best.html
+++ b/server/vine_comment/vine_comment/templates/site/comments_best.html
@@ -12,7 +12,7 @@
   <li class="active">最优</li>
 </ol>
 
-{% include 'comments_list.html' %}
+{% include 'site/comments_list.html' %}
 
 		<ul class='pagination'>
 		{% if p_comment.has_previous %}
