--- a/server/vine_comment/vine_comment/templates/site/comments_debate.html
+++ b/server/vine_comment/vine_comment/templates/site/comments_debate.html
@@ -12,35 +12,35 @@
   <li class="active">热议</li>
   {% if days == '1' %}
   <li class="active">
-    <a href="/comments/hot/1" id="comments_hot_1"><b>今日</b></a> | 
-    <a href="/comments/hot/7" id="comments_hot_7">7天</a> | 
-    <a href="/comments/hot/30" id="comments_hot_30">30天</a>
+    <a href="/comments/debate/1" id="comments_debate_1"><b>今日</b></a> | 
+    <a href="/comments/debate/7" id="comments_debate_7">7天</a> | 
+    <a href="/comments/debate/30" id="comments_debate_30">30天</a>
   </li>
   {% else %}
   {% if days == '7' %}
   <li class="active">
-    <a href="/comments/hot/1" id="comments_hot_1">今日</a> | 
-    <a href="/comments/hot/7" id="comments_hot_7"><b>7天</b></a> | 
-    <a href="/comments/hot/30" id="comments_hot_30">30天</a>
+    <a href="/comments/debate/1" id="comments_debate_1">今日</a> | 
+    <a href="/comments/debate/7" id="comments_debate_7"><b>7天</b></a> | 
+    <a href="/comments/debate/30" id="comments_debate_30">30天</a>
   </li>
   {% else %}
   <li class="active">
-    <a href="/comments/hot/1" id="comments_hot_1">今日</a> | 
-    <a href="/comments/hot/7" id="comments_hot_7">7天</a> | 
-    <a href="/comments/hot/30" id="comments_hot_30"><b>30天</b></a>
+    <a href="/comments/debate/1" id="comments_debate_1">今日</a> | 
+    <a href="/comments/debate/7" id="comments_debate_7">7天</a> | 
+    <a href="/comments/debate/30" id="comments_debate_30"><b>30天</b></a>
   </li>
   {% endif %}
   {% endif %}
 </ol>
 
-{% include 'comments_list.html' %}
+{% include 'site/comments_list.html' %}
 		<ul class='pagination'>
 		{% if p_comment.has_previous %}
-		<li id='pagination_arrow_{{ p_comment.previous_page_number }}'><a href='/comments/hot/{{days}}?page={{ p_comment.previous_page_number }}'>«</a></li>
+		<li id='pagination_arrow_{{ p_comment.previous_page_number }}'><a href='/comments/debate/{{days}}?page={{ p_comment.previous_page_number }}'>«</a></li>
     {% comment %}
 		<script type="text/javascript">
 			$('#pagination_arrow_{{ p_comment.previous_page_number }}').on('click', function() {
-				$('#showMsg').load('/comments/hot/{{days}}?page={{ p_comment.previous_page_number }}');
+				$('#showMsg').load('/comments/debate/{{days}}?page={{ p_comment.previous_page_number }}');
 			});
 		</script>
     {% endcomment %}
@@ -49,11 +49,11 @@
 			{% ifequal num p_comment.number %}
 				<li><span class="current"><b>{{ num }}</b></span></li>
 			{% else %}
-				<li id='pagination_{{num}}'><a href="/comments/hot/{{days}}?page={{ num }}">{{ num }}</a></li>
+				<li id='pagination_{{num}}'><a href="/comments/debate/{{days}}?page={{ num }}">{{ num }}</a></li>
     {% comment %}
 				<script type="text/javascript">
 					$('#pagination_{{num}}').on('click', function() {
-						$('#showMsg').load('/comments/hot/{{days}}?page={{ num }}');
+						$('#showMsg').load('/comments/debate/{{days}}?page={{ num }}');
 					});
 				</script>
     {% endcomment %}
@@ -61,11 +61,11 @@
 			{% endifequal %}
 		{% endfor %}
 		{% if p_comment.has_next %}
-		<li id='pagination_arrow_{{ p_comment.next_page_number }}'><a href="/comments/hot/{{days}}?page={{ p_comment.next_page_number }}">»</a></li>
+		<li id='pagination_arrow_{{ p_comment.next_page_number }}'><a href="/comments/debate/{{days}}?page={{ p_comment.next_page_number }}">»</a></li>
     {% comment %}
 		<script type="text/javascript">
 			$('#pagination_arrow_{{ p_comment.next_page_number }}').on('click', function() {
-          $('#showMsg').load('/comments/hot/{{days}}?page={{ p_comment.next_page_number }}');
+          $('#showMsg').load('/comments/debate/{{days}}?page={{ p_comment.next_page_number }}');
 			});
 		</script>
     {% endcomment %}
@@ -73,4 +73,3 @@
 
 		</ul>
 {% endblock %}
-
