--- a/server/vine_comment/vine_comment/templates/home.html
+++ b/server/vine_comment/vine_comment/templates/home.html
@@ -27,7 +27,7 @@ background-color: #F3F3F3;
 
 {% block content %}
 
-{% include 'home_raw.html' %}
+{% include 'site/home_raw.html' %}
 
 {% endblock %}
 
