use common reply

--- a/server/vine_comment/vine_comment/templates/comments/comments_plugin_new.html
+++ b/server/vine_comment/vine_comment/templates/comments/comments_plugin_new.html
@@ -61,7 +61,7 @@
                      <div id="replyDivNew{{message.id}}" style="display:none;margin-top:10px">
                      <br>
                        <div id="repliesofNew{{message.id}}">
-                       {% include 'reply.html' %}
+                       {% include 'common/reply.html' %}
                        </div>
                        <div name="reply{{message.id}}" class="input-group">
                          <textarea rows="5" style="width:100%;height:34px;resize:none" id="replyNew{{message.id}}" name="reply" placeholder="可输入5-140个字"></textarea>
