--- a/server/vine_comment/vine_comment/templates/comments/comments_you_like.html
+++ b/server/vine_comment/vine_comment/templates/comments/comments_you_like.html
@@ -88,7 +88,7 @@
 
          <div id="replyDiv{{message.id}}" style="display:none;margin-top:10px">
            <div id="repliesof{{message.id}}">
-           {% include 'reply.html' %}
+           {% include 'common/reply.html' %}
            </div>
            <div name="reply{{message.id}}" class="input-group">
              <textarea rows="5" style="width:100%;height:34px;resize:none" id="reply{{message.id}}" name="reply" placeholder="可输入5-140个字"></textarea>
