--- a/server/vine_comment/vine_comment/templates/comments/comments_plugin_hot.html
+++ b/server/vine_comment/vine_comment/templates/comments/comments_plugin_hot.html
@@ -62,7 +62,7 @@
                      <div id="replyDivHot{{message.id}}" style="display:none;margin-top:10px">
                      <br>
                        <div id="repliesofHot{{message.id}}">
-                       {% include 'reply.html' %}
+                       {% include 'common/reply.html' %}
                        </div>
                        <div name="reply{{message.id}}" class="input-group">
                          <textarea rows="5" style="width:100%;height:34px;resize:none" id="reply{{message.id}}" name="reply" placeholder="可输入5-140个字"></textarea>
