put comments to plugin/comments dir

--- a/server/vine_comment/vine_comment/templates/plugin/comments/rich_editor.html
+++ b/server/vine_comment/vine_comment/templates/plugin/comments/rich_editor.html
@@ -2,4 +2,4 @@
 <link href="//netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
 {% load staticfiles %}
 <script src="{% static "bootstrap/js/bootstrap-wysiwyg.js" %}"></script>
-{% include "comments/wysiwyg_editor.html" %}
+{% include "plugin/comments/wysiwyg_editor.html" %}
