--- a/server/vine_comment/vine_comment/templates/plugin/comments_tag_simple.html
+++ b/server/vine_comment/vine_comment/templates/plugin/comments_tag_simple.html
@@ -1,5 +1,5 @@
 
-{% extends 'comments/base.html' %}
+{% extends 'plugin/comments/base.html' %}
 {% load crispy_forms_tags %}
 {% load avatar_tags %}
 
