Refine dir structures

--- a/server/vine_comment/vine_comment/templates/plugin/comment_view_meta.html
+++ b/server/vine_comment/vine_comment/templates/plugin/comment_view_meta.html
@@ -1,4 +1,4 @@
-{% extends "plugin/comments/base.html" %}
+{% extends "plugin/base.html" %}
 {% block content %}
 {% load staticfiles %}
 
@@ -155,7 +155,7 @@ background: url(../../../static/icons/bg_sprites.png) 0 -60px repeat-x;
         
 
 		<div id="showMsg">
-			{% include "plugin/comments/comment_list.html" %}
+			{% include "plugin/comment_list.html" %}
 		</div> <!-- /#showMsg -->
 		<br>
     </div>
