--- a/server/vine_comment/vine_comment/templates/site/comments_tag.html
+++ b/server/vine_comment/vine_comment/templates/site/comments_tag.html
@@ -12,6 +12,6 @@
   <li class="active">TAG前十位随机取3个</li>
 </ol>
 
-{% include 'site/comments_tag_raw.html' %}
+{% include 'common/comments_tag_raw.html' %}
 
 {% endblock %}
