--- a/server/vine_comment/vine_comment/templates/plugin/home_simple.html
+++ b/server/vine_comment/vine_comment/templates/plugin/home_simple.html
@@ -1,10 +1,10 @@
 
-{% extends 'plugin/comments/base.html' %}
+{% extends 'plugin/base.html' %}
 {% load crispy_forms_tags %}
 {% load avatar_tags %}
 
 {% block content %}
 
-{% include 'site/home_raw.html' %}
+{% include 'common/home_raw.html' %}
 
 {% endblock %}
