--- a/server/vine_comment/vine_comment/templates/site/comments_debate.html
+++ b/server/vine_comment/vine_comment/templates/site/comments_debate.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'site/base.html' %}
 {% load staticfiles %}
 {% block head %}
 <link href="{% static 'css/home.css' %}" rel="stylesheet"/>
